@@ -1,4 +1,5 @@
 SVN
+- IIapi_getDescriptor() should only be called for SELECT statements
 - Add ingres_fetch_assoc()
 - Fix bug 16752 - Send all string values as IIAPI_VCH_TYPE
 - Allow for a 0 offset in all ingres field functions 
